[package]
name = "lima-city-ddns"
version = "2.0.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
